--- a/QEMZMSEPC.ipynb
+++ b/QEMZMSEPC.ipynb
@@ -24,7 +24,8 @@
    "outputs": [],
    "source": [
     "import pennylane as qml\n",
-    "from pennylane import numpy as np"
+    "from pennylane import numpy as np\n",
+    "import random"
    ]
   },
   {
@@ -74,48 +75,30 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "d1de3dcd",
+   "id": "b9b3b224",
    "metadata": {},
    "outputs": [],
    "source": [
     "# After obtaining all Pauli bases on N qubits,\n",
-    "# we can define a class to obtain all Kraus matrices of a depolarizing channel on N qubits.\n",
-    "class NqubitsDepolarizingChannel:\n",
-    "    def __init__(self, n_qubits, pauli_set_n_qubits, p):\n",
-    "        # p: Depolarization rate.\n",
-    "        self.n_qubits = n_qubits\n",
-    "        self.pauli_set_n_qubits = pauli_set_n_qubits\n",
-    "        self.p = p\n",
-    "    \n",
-    "    def get_kraus_matrices_of_a_depolarizing_channel(self):\n",
-    "        kraus_matrices = self.pauli_set_n_qubits.copy()\n",
-    "        for i in range(1, len(kraus_matrices)):\n",
-    "            kraus_matrices[i] = kraus_matrices[i] * np.sqrt((1 - self.p)/(4 ** self.n_qubits - 1))\n",
-    "        kraus_matrices[0] = np.sqrt(self.p) * kraus_matrices[0]\n",
-    "        return kraus_matrices"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "id": "32c24fe0",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Next, we define a class to randomly generate Pauli channels on N qubits,\n",
+    "# we can define a function to obtain all Kraus matrices of a depolarizing channel on N qubits.\n",
+    "# Next, we define a function to randomly generate Pauli channels on N qubits,\n",
     "# which will be considered as measurement noise in the subsequent analysis.\n",
-    "import random\n",
-    "class NqubitsPauliChannel:\n",
+    "# We're going to encapsulate these functions in a class.\n",
+    "\n",
+    "\n",
+    "class NqubitsChannel:\n",
     "    def __init__(self, n_qubits, pauli_set_n_qubits):\n",
     "        self.n_qubits = n_qubits\n",
     "        self.pauli_set_n_qubits = pauli_set_n_qubits\n",
+    "        \n",
+    "    def nqubitsdepolarizingChannel(self, p):\n",
+    "        kraus_matrices = self.pauli_set_n_qubits.copy()\n",
+    "        for i in range(1, len(kraus_matrices)):\n",
+    "            kraus_matrices[i] = kraus_matrices[i] * np.sqrt((1 - p)/(4 ** self.n_qubits - 1))\n",
+    "        kraus_matrices[0] = np.sqrt(p) * kraus_matrices[0]\n",
+    "        return kraus_matrices\n",
     "    \n",
-    "    def get_kraus_matrices_of_a_random_pauli_channel(self, p_identity=0.5):\n",
-    "# In the context of a Pauli channel,\n",
-    "# the coefficient p_identity in the Kraus matrix can be interpreted as the weight assigned to the identity matrix.\n",
-    "# Typically, this coefficient is considered to be greater than 0.5,\n",
-    "# indicating that the measurement noise is not excessively large\n",
-    "# and does not result in drastic changes to the quantum state.\n",
+    "    def nqubitsrandompaulichannel(self, p_identity=0.5):\n",
     "        kraus_matrices = self.pauli_set_n_qubits.copy()\n",
     "        p_total = 1\n",
     "        coefficient_0 = random.uniform(p_identity, p_total)\n",
@@ -126,22 +109,9 @@
     "            kraus_matrices[i] = kraus_matrices[i] * np.sqrt(coefficient_i)\n",
     "            p_total -= coefficient_i\n",
     "        kraus_matrices[-1] = kraus_matrices[-1] * np.sqrt(p_total)\n",
-    "        return kraus_matrices"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "id": "69dd5791",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "class NqubitsIdentityChannel:\n",
-    "    def __init__(self, n_qubits, pauli_set_n_qubits):\n",
-    "        self.n_qubits = n_qubits\n",
-    "        self.pauli_set_n_qubits = pauli_set_n_qubits\n",
-    "        \n",
-    "    def get_kraus_matrices_of_a_identity_channel(self):\n",
+    "        return kraus_matrices\n",
+    "    \n",
+    "    def nqubitsidentitychannel(self):\n",
     "        kraus_matrices = self.pauli_set_n_qubits.copy()\n",
     "        for i in range(1, len(kraus_matrices)):\n",
     "            kraus_matrices[i] = kraus_matrices[i] * 0\n",
@@ -150,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "id": "fb5291eb",
    "metadata": {},
    "outputs": [],
@@ -159,8 +129,7 @@
     "    def __init__(self, n_qubits):\n",
     "        self.n_qubits = n_qubits\n",
     "        self.nqubitspaulimatrices = NqubitsPauliMatrices\n",
-    "        self.nqubitsdepolarizingchannel = NqubitsDepolarizingChannel\n",
-    "        self.nqubitsidentitychannel = NqubitsIdentityChannel\n",
+    "        self.nqubitschannel = NqubitsChannel\n",
     "        \n",
     "        \n",
     "    def circuit_output(self, operations, paras, dev, p=1,\n",
@@ -215,16 +184,16 @@
     "        if need_gate_noise:\n",
     "            nqubitspaulimatrices = self.nqubitspaulimatrices(self.n_qubits)\n",
     "            pauli_set_n_qubits = nqubitspaulimatrices.get_pauli_matrices_of_n_qubits()\n",
-    "            nqubitsdepolarizingchannel = self.nqubitsdepolarizingchannel(self.n_qubits, pauli_set_n_qubits, p)\n",
-    "            kraus_matrices_of_a_depolarizing_channel = nqubitsdepolarizingchannel.get_kraus_matrices_of_a_depolarizing_channel()\n",
+    "            nqubitschannel = self.nqubitschannel(self.n_qubits, pauli_set_n_qubits)\n",
+    "            kraus_matrices_of_a_depolarizing_channel = nqubitschannel.nqubitsdepolarizingChannel(p)\n",
     "            qml.QubitChannel(K_list=kraus_matrices_of_a_depolarizing_channel,\n",
     "                         wires=[i for i in range(self.n_qubits)])\n",
     "        if need_measurement_noise:\n",
     "            if kraus_matrices_of_a_pauli_channel is None:\n",
     "                nqubitspaulimatrices = self.nqubitspaulimatrices(self.n_qubits)\n",
     "                pauli_set_n_qubits = nqubitspaulimatrices.get_pauli_matrices_of_n_qubits()\n",
-    "                nqubitsidentitychannel = self.nqubitsidentitychannel(self.n_qubits, pauli_set_n_qubits)\n",
-    "                kraus_matrices_of_a_pauli_channel = nqubitsidentitychannel.get_kraus_matrices_of_a_identity_channel()\n",
+    "                nqubitschannel = self.nqubitschannel(self.n_qubits, pauli_set_n_qubits)\n",
+    "                kraus_matrices_of_a_pauli_channel = nqubitschannel.nqubitsidentitychannel()\n",
     "            qml.QubitChannel(kraus_matrices_of_a_pauli_channel,\n",
     "                         wires=[i for i in range(self.n_qubits)])\n",
     "        \n",
@@ -277,8 +246,8 @@
     "            if need_gate_noise:\n",
     "                nqubitspaulimatrices = self.nqubitspaulimatrices(self.n_qubits)\n",
     "                pauli_set_n_qubits = nqubitspaulimatrices.get_pauli_matrices_of_n_qubits()\n",
-    "                nqubitsdepolarizingchannel = self.nqubitsdepolarizingchannel(self.n_qubits, pauli_set_n_qubits, p)\n",
-    "                kraus_matrices_of_a_depolarizing_channel = nqubitsdepolarizingchannel.get_kraus_matrices_of_a_depolarizing_channel()\n",
+    "                nqubitschannel = self.nqubitschannel(self.n_qubits, pauli_set_n_qubits)\n",
+    "                kraus_matrices_of_a_depolarizing_channel = nqubitschannel.nqubitsdepolarizingChannel(p)\n",
     "                qml.QubitChannel(K_list=kraus_matrices_of_a_depolarizing_channel,\n",
     "                             wires=[i for i in range(self.n_qubits)])\n",
     "\n",
@@ -296,8 +265,8 @@
     "            if need_gate_noise:\n",
     "                nqubitspaulimatrices = self.nqubitspaulimatrices(self.n_qubits)\n",
     "                pauli_set_n_qubits = nqubitspaulimatrices.get_pauli_matrices_of_n_qubits()\n",
-    "                nqubitsdepolarizingchannel = self.nqubitsdepolarizingchannel(self.n_qubits, pauli_set_n_qubits, p)\n",
-    "                kraus_matrices_of_a_depolarizing_channel = nqubitsdepolarizingchannel.get_kraus_matrices_of_a_depolarizing_channel()\n",
+    "                nqubitschannel = self.nqubitschannel(self.n_qubits, pauli_set_n_qubits)\n",
+    "                kraus_matrices_of_a_depolarizing_channel = nqubitschannel.nqubitsdepolarizingChannel(p)\n",
     "                qml.QubitChannel(K_list=kraus_matrices_of_a_depolarizing_channel,\n",
     "                             wires=[i for i in range(self.n_qubits)])   \n",
     "        \n",
@@ -305,8 +274,8 @@
     "            if kraus_matrices_of_a_pauli_channel is None:\n",
     "                nqubitspaulimatrices = self.nqubitspaulimatrices(self.n_qubits)\n",
     "                pauli_set_n_qubits = nqubitspaulimatrices.get_pauli_matrices_of_n_qubits()\n",
-    "                nqubitsidentitychannel = self.nqubitsidentitychannel(self.n_qubits, pauli_set_n_qubits)\n",
-    "                kraus_matrices_of_a_pauli_channel = nqubitsidentitychannel.get_kraus_matrices_of_a_identity_channel()\n",
+    "                nqubitschannel = self.nqubitschannel(self.n_qubits, pauli_set_n_qubits)\n",
+    "                kraus_matrices_of_a_pauli_channel = nqubitschannel.nqubitsidentitychannel()\n",
     "            qml.QubitChannel(kraus_matrices_of_a_pauli_channel,\n",
     "                         wires=[i for i in range(self.n_qubits)])\n",
     "        \n",
@@ -323,8 +292,8 @@
     "        if kraus_matrices_of_a_pauli_channel is None:\n",
     "            nqubitspaulimatrices = self.nqubitspaulimatrices(self.n_qubits)\n",
     "            pauli_set_n_qubits = nqubitspaulimatrices.get_pauli_matrices_of_n_qubits()\n",
-    "            nqubitsidentitychannel = self.nqubitsidentitychannel(self.n_qubits, pauli_set_n_qubits)\n",
-    "            kraus_matrices_of_a_pauli_channel = nqubitsidentitychannel.get_kraus_matrices_of_a_identity_channel()\n",
+    "            nqubitschannel = self.nqubitschannel(self.n_qubits, pauli_set_n_qubits)\n",
+    "            kraus_matrices_of_a_pauli_channel = nqubitschannel.nqubitsidentitychannel()\n",
     "        qml.QubitChannel(kraus_matrices_of_a_pauli_channel,\n",
     "                         wires=[i for i in range(self.n_qubits)])\n",
     "        m = qml.PauliZ(0)\n",
@@ -339,8 +308,8 @@
     "        if kraus_matrices_of_a_pauli_channel is None:\n",
     "            nqubitspaulimatrices = self.nqubitspaulimatrices(self.n_qubits)\n",
     "            pauli_set_n_qubits = nqubitspaulimatrices.get_pauli_matrices_of_n_qubits()\n",
-    "            nqubitsidentitychannel = self.nqubitsidentitychannel(self.n_qubits, pauli_set_n_qubits)\n",
-    "            kraus_matrices_of_a_pauli_channel = nqubitsidentitychannel.get_kraus_matrices_of_a_identity_channel()\n",
+    "            nqubitschannel = self.nqubitschannel(self.n_qubits, pauli_set_n_qubits)\n",
+    "            kraus_matrices_of_a_pauli_channel = nqubitschannel.nqubitsidentitychannel()\n",
     "        for i in range(self.n_qubits):\n",
     "            qml.PauliX(wires=i)\n",
     "        qml.QubitChannel(kraus_matrices_of_a_pauli_channel,\n",
@@ -356,8 +325,8 @@
     "        if kraus_matrices_of_a_pauli_channel is None:\n",
     "            nqubitspaulimatrices = self.nqubitspaulimatrices(self.n_qubits)\n",
     "            pauli_set_n_qubits = nqubitspaulimatrices.get_pauli_matrices_of_n_qubits()\n",
-    "            nqubitsidentitychannel = self.nqubitsidentitychannel(self.n_qubits, pauli_set_n_qubits)\n",
-    "            kraus_matrices_of_a_pauli_channel = nqubitsidentitychannel.get_kraus_matrices_of_a_identity_channel()\n",
+    "            nqubitschannel = self.nqubitschannel(self.n_qubits, pauli_set_n_qubits)\n",
+    "            kraus_matrices_of_a_pauli_channel = nqubitschannel.nqubitsidentitychannel()\n",
     "            \n",
     "        z_unmitigated = self.circuit_output(operations=operations, paras=paras, p=p, dev=dev,\n",
     "                    kraus_matrices_of_a_pauli_channel=kraus_matrices_of_a_pauli_channel,\n",
@@ -377,7 +346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "id": "d3e08483",
    "metadata": {},
    "outputs": [],
@@ -388,7 +357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "id": "50b8e495",
    "metadata": {},
    "outputs": [
@@ -397,32 +366,32 @@
      "output_type": "stream",
      "text": [
       "z_ideal is 1.0\n",
-      "z_unmitigated is 0.2701013991411113\n",
-      "z_mitigated is 1.000000000000003\n",
+      "z_unmitigated is 0.38797268010822256\n",
+      "z_mitigated is 1.0000000000000062\n",
       "------------------\n",
       "z_ideal is 0.5931327983656769\n",
-      "z_unmitigated is 0.4630742455670899\n",
-      "z_mitigated is 0.5931327983656794\n",
+      "z_unmitigated is 0.41311949656794544\n",
+      "z_mitigated is 0.5931327983656791\n",
       "------------------\n",
       "z_ideal is 0.1493041506116879\n",
-      "z_unmitigated is 0.018448027085058064\n",
-      "z_mitigated is 0.14930415061169358\n",
+      "z_unmitigated is 0.028365230445399944\n",
+      "z_mitigated is 0.14930415061169378\n",
       "------------------\n",
       "z_ideal is 0.0051202072280735166\n",
-      "z_unmitigated is 0.003837761913675998\n",
-      "z_mitigated is 0.00512020722807638\n",
+      "z_unmitigated is 0.003621755373869079\n",
+      "z_mitigated is 0.005120207228076206\n",
       "------------------\n",
       "z_ideal is 0.0002755900039979539\n",
-      "z_unmitigated is 0.00019269513970334579\n",
-      "z_mitigated is 0.00027559000399633054\n",
+      "z_unmitigated is 6.702351346156432e-05\n",
+      "z_mitigated is 0.00027559000399626196\n",
       "------------------\n",
       "z_ideal is 0.06495850756506487\n",
-      "z_unmitigated is 0.02845700072310266\n",
-      "z_mitigated is 0.06495850756505615\n",
+      "z_unmitigated is 0.02649745924320478\n",
+      "z_mitigated is 0.06495850756505654\n",
       "------------------\n",
       "z_ideal is 0.4119471515970569\n",
-      "z_unmitigated is 0.27186873914320075\n",
-      "z_mitigated is 0.4119471515970641\n",
+      "z_unmitigated is 0.07515730638134846\n",
+      "z_mitigated is 0.4119471515970632\n",
       "------------------\n"
      ]
     }
@@ -437,8 +406,8 @@
     "for rotation_angle_of_rx in rotation_angle:\n",
     "    nqubitspaulimatrices = NqubitsPauliMatrices(n_qubits)\n",
     "    pauli_set_n_qubits = nqubitspaulimatrices.get_pauli_matrices_of_n_qubits()\n",
-    "    nqubitspaulichannel = NqubitsPauliChannel(n_qubits, pauli_set_n_qubits)\n",
-    "    kraus_matrices_of_a_pauli_channel = nqubitspaulichannel.get_kraus_matrices_of_a_random_pauli_channel()\n",
+    "    nqubitschannel = NqubitsChannel(n_qubits, pauli_set_n_qubits)\n",
+    "    kraus_matrices_of_a_pauli_channel = nqubitschannel.nqubitsrandompaulichannel()\n",
     "    # The operations and paras required to simulate a Trotter step quantum circuit are as follows.\n",
     "    operations = ['RX', 'RX', 'RX', 'RX', 'CNOT', 'CNOT', 'RZ', 'RZ', 'CNOT', 'CNOT', 'CNOT', 'RZ', 'CNOT']\n",
     "    rotation_angle_of_rz = -0.2\n",
@@ -459,7 +428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "id": "ea55f1ca",
    "metadata": {},
    "outputs": [],
@@ -471,7 +440,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "153995d3",
+   "id": "adb42e33",
    "metadata": {},
    "outputs": [],
    "source": []
