--- a/QEMZMSEPC.ipynb
+++ b/QEMZMSEPC.ipynb
@@ -341,7 +341,7 @@
     "            p_t = p_u * 0.5 * (qemzmsepc.__calibration_cir1_output(dev, kraus_matrices_of_a_pauli_channel) -\n",
     "                       qemzmsepc.__calibration_cir2_output(dev, kraus_matrices_of_a_pauli_channel))\n",
     "        z_mitigated = z_unmitigated / p_t\n",
-    "        return z_mitigated"
+    "        return z_mitigated, p_t"
    ]
   },
   {
@@ -366,32 +366,32 @@
      "output_type": "stream",
      "text": [
       "z_ideal is 1.0\n",
-      "z_unmitigated is 0.38797268010822256\n",
-      "z_mitigated is 1.0000000000000062\n",
+      "z_unmitigated is 0.05538313694603913\n",
+      "z_mitigated is 1.000000000000003\n",
       "------------------\n",
       "z_ideal is 0.5931327983656769\n",
-      "z_unmitigated is 0.41311949656794544\n",
-      "z_mitigated is 0.5931327983656791\n",
+      "z_unmitigated is 0.4668347950317038\n",
+      "z_mitigated is 0.5931327983656794\n",
       "------------------\n",
       "z_ideal is 0.1493041506116879\n",
-      "z_unmitigated is 0.028365230445399944\n",
-      "z_mitigated is 0.14930415061169378\n",
+      "z_unmitigated is 0.10842430025359916\n",
+      "z_mitigated is 0.1493041506116933\n",
       "------------------\n",
       "z_ideal is 0.0051202072280735166\n",
-      "z_unmitigated is 0.003621755373869079\n",
-      "z_mitigated is 0.005120207228076206\n",
+      "z_unmitigated is 0.0016840658187428498\n",
+      "z_mitigated is 0.005120207228076183\n",
       "------------------\n",
       "z_ideal is 0.0002755900039979539\n",
-      "z_unmitigated is 6.702351346156432e-05\n",
-      "z_mitigated is 0.00027559000399626196\n",
+      "z_unmitigated is 5.198120613025825e-05\n",
+      "z_mitigated is 0.000275590003995892\n",
       "------------------\n",
       "z_ideal is 0.06495850756506487\n",
-      "z_unmitigated is 0.02649745924320478\n",
-      "z_mitigated is 0.06495850756505654\n",
+      "z_unmitigated is 0.036054203806155455\n",
+      "z_mitigated is 0.0649585075650561\n",
       "------------------\n",
       "z_ideal is 0.4119471515970569\n",
-      "z_unmitigated is 0.07515730638134846\n",
-      "z_mitigated is 0.4119471515970632\n",
+      "z_unmitigated is 0.16525638944344861\n",
+      "z_mitigated is 0.4119471515970639\n",
       "------------------\n"
      ]
     }
@@ -420,7 +420,7 @@
     "                        kraus_matrices_of_a_pauli_channel=kraus_matrices_of_a_pauli_channel,\n",
     "                        need_gate_noise=True, need_measurement_noise=True)\n",
     "    print(f\"z_unmitigated is {z_unmitigated}\")\n",
-    "    z_mitigated = qemzmsepc.qemzmsepc(operations=operations, paras=paras, p=p,\n",
+    "    z_mitigated, _ = qemzmsepc.qemzmsepc(operations=operations, paras=paras, p=p,\n",
     "                        kraus_matrices_of_a_pauli_channel=kraus_matrices_of_a_pauli_channel, dev=dev)\n",
     "    print(f\"z_mitigated is {z_mitigated}\")\n",
     "    print(\"------------------\")"
