--- a/qml-task-test.ipynb
+++ b/qml-task-test.ipynb
@@ -22,31 +22,31 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Cost after step     5:  0.7941164\n",
-      "Cost after step    10:  0.2148841\n",
-      "Cost after step    15:  0.0985206\n",
-      "Cost after step    20:  0.0623140\n",
-      "Cost after step    25:  0.0465456\n",
-      "Cost after step    30:  0.0382026\n",
-      "Cost after step    35:  0.0332312\n",
-      "Cost after step    40:  0.0300305\n",
-      "Cost after step    45:  0.0278581\n",
-      "Cost after step    50:  0.0263275\n",
-      "Cost after step    55:  0.0252197\n",
-      "Cost after step    60:  0.0244015\n",
-      "Cost after step    65:  0.0237883\n",
-      "Cost after step    70:  0.0233233\n",
-      "Cost after step    75:  0.0229677\n",
-      "Cost after step    80:  0.0226939\n",
-      "Cost after step    85:  0.0224821\n",
-      "Cost after step    90:  0.0223175\n",
-      "Cost after step    95:  0.0221892\n",
-      "Cost after step   100:  0.0220890\n",
-      "Optimized rotation angles: [[[ 0.33843116  1.51519911  0.00184673]\n",
-      "  [ 0.70876477  1.31498372 -0.07759259]]\n",
+      "Cost after step     5:  0.9594914\n",
+      "Cost after step    10:  0.2460653\n",
+      "Cost after step    15:  0.1239201\n",
+      "Cost after step    20:  0.0847992\n",
+      "Cost after step    25:  0.0668109\n",
+      "Cost after step    30:  0.0567241\n",
+      "Cost after step    35:  0.0503400\n",
+      "Cost after step    40:  0.0459657\n",
+      "Cost after step    45:  0.0428002\n",
+      "Cost after step    50:  0.0404181\n",
+      "Cost after step    55:  0.0385734\n",
+      "Cost after step    60:  0.0371133\n",
+      "Cost after step    65:  0.0359379\n",
+      "Cost after step    70:  0.0349792\n",
+      "Cost after step    75:  0.0341886\n",
+      "Cost after step    80:  0.0335310\n",
+      "Cost after step    85:  0.0329802\n",
+      "Cost after step    90:  0.0325158\n",
+      "Cost after step    95:  0.0321225\n",
+      "Cost after step   100:  0.0317879\n",
+      "Optimized rotation angles: [[[ 0.98527287  1.40624423  0.05604274]\n",
+      "  [ 0.24127555  0.76391887  0.1315054 ]]\n",
       "\n",
-      " [[ 0.07960069  1.82542791  0.66035409]\n",
-      "  [ 0.4705601   0.87517549  0.55665802]]]\n"
+      " [[-0.11818263  2.3767891   0.52192344]\n",
+      "  [ 0.42481946  0.62236572  0.66514543]]]\n"
      ]
     }
    ],
@@ -113,7 +113,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.8526133762398178\n"
+      "0.8277125429510501\n"
      ]
     }
    ],
@@ -124,8 +124,14 @@
     "\n",
     "operations = ['RX', 'RY', 'RZ', 'RX', 'RY', 'RZ', 'CNOT', 'CNOT',\n",
     "              'RX', 'RY', 'RZ', 'RX', 'RY', 'RZ', 'CNOT', 'CNOT']\n",
-    "paras = [[0, 0], [0, 0], [0, 0], [0, 0], [0, 0], [0, 0], [0, 1], [1, 0],\n",
-    "         [0, 0], [0, 0], [0, 0], [0, 0], [0, 0], [0, 0], [0, 1], [1, 0]]\n",
+    "\n",
+    "shape = qml.StronglyEntanglingLayers.shape(n_layers=2, n_wires=2)\n",
+    "weights = np.random.random(size=shape)\n",
+    "\n",
+    "w = weights.copy().reshape(-1)\n",
+    "\n",
+    "paras = [[0, w[0]], [0, w[1]], [0, w[2]], [0, w[3]], [0, w[4]], [0, w[5]], [0, 1], [1, 0],\n",
+    "         [0, w[6]], [0, w[7]], [0, w[8]], [0, w[9]], [0, w[10]], [0, w[11]], [0, 1], [1, 0]]\n",
     "# Due to our assumption that the noise channel is time-invariant,\n",
     "# we randomly initialize a quantum circuit to estimate,\n",
     "# with the estimation of  considered to be stable and unchanged in the short term.\n",
@@ -146,31 +152,31 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Cost after step     5:  0.0975251\n",
-      "Cost after step    10:  0.0273574\n",
-      "Cost after step    15:  0.0129686\n",
-      "Cost after step    20:  0.0076579\n",
-      "Cost after step    25:  0.0050993\n",
-      "Cost after step    30:  0.0036622\n",
-      "Cost after step    35:  0.0027704\n",
-      "Cost after step    40:  0.0021764\n",
-      "Cost after step    45:  0.0017598\n",
-      "Cost after step    50:  0.0014554\n",
-      "Cost after step    55:  0.0012258\n",
-      "Cost after step    60:  0.0010480\n",
-      "Cost after step    65:  0.0009074\n",
-      "Cost after step    70:  0.0007941\n",
-      "Cost after step    75:  0.0007013\n",
-      "Cost after step    80:  0.0006244\n",
-      "Cost after step    85:  0.0005598\n",
-      "Cost after step    90:  0.0005050\n",
-      "Cost after step    95:  0.0004581\n",
-      "Cost after step   100:  0.0004176\n",
-      "Optimized rotation angles: [[[0.86194253 1.41273757 0.10672686]\n",
-      "  [0.36370012 1.35152275 0.01208757]]\n",
+      "Cost after step     5:  0.2788743\n",
+      "Cost after step    10:  0.0768806\n",
+      "Cost after step    15:  0.0333721\n",
+      "Cost after step    20:  0.0183003\n",
+      "Cost after step    25:  0.0114832\n",
+      "Cost after step    30:  0.0078555\n",
+      "Cost after step    35:  0.0057046\n",
+      "Cost after step    40:  0.0043276\n",
+      "Cost after step    45:  0.0033939\n",
+      "Cost after step    50:  0.0027323\n",
+      "Cost after step    55:  0.0022465\n",
+      "Cost after step    60:  0.0018795\n",
+      "Cost after step    65:  0.0015954\n",
+      "Cost after step    70:  0.0013712\n",
+      "Cost after step    75:  0.0011911\n",
+      "Cost after step    80:  0.0010442\n",
+      "Cost after step    85:  0.0009229\n",
+      "Cost after step    90:  0.0008215\n",
+      "Cost after step    95:  0.0007360\n",
+      "Cost after step   100:  0.0006632\n",
+      "Optimized rotation angles: [[[ 0.13852519  1.38179338  0.12677518]\n",
+      "  [ 0.39520627  1.44761074  0.23564253]]\n",
       "\n",
-      " [[0.01089249 1.71628939 0.59961235]\n",
-      "  [0.15160998 0.88435321 0.3117861 ]]]\n"
+      " [[-0.21772258  1.67238086  0.31310511]\n",
+      "  [ 0.31703774  0.07002425  0.31852312]]]\n"
      ]
     }
    ],
@@ -189,6 +195,7 @@
     "# by dividing the output of the quantum circuit by the noise parameter p_t\n",
     "# to obtain the expected output of the quantum circuit after error mitigation,\n",
     "# and then proceed with the Loss calculation.\n",
+    "\n",
     "\n",
     "def cost(x):\n",
     "    return ((train_cir_with_qem(x)/p_t)-(-1))**2\n",
