--- a/qml-task-test.ipynb
+++ b/qml-task-test.ipynb
@@ -22,31 +22,31 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Cost after step     5:  0.9594914\n",
-      "Cost after step    10:  0.2460653\n",
-      "Cost after step    15:  0.1239201\n",
-      "Cost after step    20:  0.0847992\n",
-      "Cost after step    25:  0.0668109\n",
-      "Cost after step    30:  0.0567241\n",
-      "Cost after step    35:  0.0503400\n",
-      "Cost after step    40:  0.0459657\n",
-      "Cost after step    45:  0.0428002\n",
-      "Cost after step    50:  0.0404181\n",
-      "Cost after step    55:  0.0385734\n",
-      "Cost after step    60:  0.0371133\n",
-      "Cost after step    65:  0.0359379\n",
-      "Cost after step    70:  0.0349792\n",
-      "Cost after step    75:  0.0341886\n",
-      "Cost after step    80:  0.0335310\n",
-      "Cost after step    85:  0.0329802\n",
-      "Cost after step    90:  0.0325158\n",
-      "Cost after step    95:  0.0321225\n",
-      "Cost after step   100:  0.0317879\n",
-      "Optimized rotation angles: [[[ 0.98527287  1.40624423  0.05604274]\n",
-      "  [ 0.24127555  0.76391887  0.1315054 ]]\n",
+      "Cost after step     5:  0.3277493\n",
+      "Cost after step    10:  0.1620262\n",
+      "Cost after step    15:  0.0834116\n",
+      "Cost after step    20:  0.0310678\n",
+      "Cost after step    25:  0.0550540\n",
+      "Cost after step    30:  0.0473296\n",
+      "Cost after step    35:  0.0637228\n",
+      "Cost after step    40:  0.0305615\n",
+      "Cost after step    45:  0.0528701\n",
+      "Cost after step    50:  0.0499776\n",
+      "Cost after step    55:  0.0686858\n",
+      "Cost after step    60:  0.0540521\n",
+      "Cost after step    65:  0.0395443\n",
+      "Cost after step    70:  0.0564822\n",
+      "Cost after step    75:  0.0124367\n",
+      "Cost after step    80:  0.0513430\n",
+      "Cost after step    85:  0.0147628\n",
+      "Cost after step    90:  0.0386811\n",
+      "Cost after step    95:  0.0324363\n",
+      "Cost after step   100:  0.0363526\n",
+      "Optimized rotation angles: [[[ 0.816732    1.54391133  0.01661329]\n",
+      "  [ 0.64230455  1.93650413  0.24587008]]\n",
       "\n",
-      " [[-0.11818263  2.3767891   0.52192344]\n",
-      "  [ 0.42481946  0.62236572  0.66514543]]]\n"
+      " [[-0.24514998  1.20448349  0.77630559]\n",
+      "  [ 0.20841162  0.44672854  0.92420115]]]\n"
      ]
     }
    ],
@@ -78,16 +78,15 @@
     "    return ((train_cir_without_qem(x))-(-1))**2\n",
     "\n",
     "opt = qml.GradientDescentOptimizer(stepsize=0.1)\n",
-    "\n",
-    "lst = []\n",
     "steps = 100\n",
     "params = weights\n",
     "\n",
     "for i in range(steps):\n",
+    "    nqubitspaulichannel = nqubitschannel.nqubitsrandompaulichannel(p_identity=0.85)\n",
+    "    nqubitsdepolarizingchannel = nqubitschannel.nqubitsdepolarizingchannel(0.9)\n",
     "    params = opt.step(cost, params)\n",
     "    if (i + 1) % 5 == 0:\n",
     "        print(\"Cost after step {:5d}: {: .7f}\".format(i + 1, cost(params)))\n",
-    "        lst.append(cost(params))\n",
     "print(\"Optimized rotation angles: {}\".format(params))"
    ]
   },
@@ -98,9 +97,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#  It can be observed that after a certain number of iterations,\n",
-    "# the Loss function nearly stops decreasing,\n",
-    "# which is due to the limitation of the expressive capacity of the quantum network caused by noise."
+    "# When simulating a complex scenario of time-varying noise channels,\n",
+    "# it can be observed that the descent of the Loss function is relatively unstable\n",
+    "# in the absence of error mitigation techniques."
    ]
   },
   {
@@ -113,7 +112,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.8277125429510501\n"
+      "0.8096893796064297\n"
      ]
     }
    ],
@@ -124,21 +123,14 @@
     "\n",
     "operations = ['RX', 'RY', 'RZ', 'RX', 'RY', 'RZ', 'CNOT', 'CNOT',\n",
     "              'RX', 'RY', 'RZ', 'RX', 'RY', 'RZ', 'CNOT', 'CNOT']\n",
-    "\n",
     "shape = qml.StronglyEntanglingLayers.shape(n_layers=2, n_wires=2)\n",
     "weights = np.random.random(size=shape)\n",
-    "\n",
     "w = weights.copy().reshape(-1)\n",
-    "\n",
     "paras = [[0, w[0]], [0, w[1]], [0, w[2]], [0, w[3]], [0, w[4]], [0, w[5]], [0, 1], [1, 0],\n",
-    "         [0, w[6]], [0, w[7]], [0, w[8]], [0, w[9]], [0, w[10]], [0, w[11]], [0, 1], [1, 0]]\n",
-    "# Due to our assumption that the noise channel is time-invariant,\n",
-    "# we randomly initialize a quantum circuit to estimate,\n",
-    "# with the estimation of  considered to be stable and unchanged in the short term.\n",
-    "\n",
+    "     [0, w[6]], [0, w[7]], [0, w[8]], [0, w[9]], [0, w[10]], [0, w[11]], [0, 1], [1, 0]]\n",
     "qemzmsepc = qem.QEMZMSEPC(n_qubits)\n",
     "_, p_t = qemzmsepc.qemzmsepc(operations=operations, paras=paras, dev=dev, p=0.9,\n",
-    "                             kraus_matrices_of_a_pauli_channel=nqubitspaulichannel)\n",
+    "                         kraus_matrices_of_a_pauli_channel=nqubitspaulichannel)\n",
     "print(p_t)"
    ]
   },
@@ -152,31 +144,31 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Cost after step     5:  0.2788743\n",
-      "Cost after step    10:  0.0768806\n",
-      "Cost after step    15:  0.0333721\n",
-      "Cost after step    20:  0.0183003\n",
-      "Cost after step    25:  0.0114832\n",
-      "Cost after step    30:  0.0078555\n",
-      "Cost after step    35:  0.0057046\n",
-      "Cost after step    40:  0.0043276\n",
-      "Cost after step    45:  0.0033939\n",
-      "Cost after step    50:  0.0027323\n",
-      "Cost after step    55:  0.0022465\n",
-      "Cost after step    60:  0.0018795\n",
-      "Cost after step    65:  0.0015954\n",
-      "Cost after step    70:  0.0013712\n",
-      "Cost after step    75:  0.0011911\n",
-      "Cost after step    80:  0.0010442\n",
-      "Cost after step    85:  0.0009229\n",
-      "Cost after step    90:  0.0008215\n",
-      "Cost after step    95:  0.0007360\n",
-      "Cost after step   100:  0.0006632\n",
-      "Optimized rotation angles: [[[ 0.13852519  1.38179338  0.12677518]\n",
-      "  [ 0.39520627  1.44761074  0.23564253]]\n",
+      "Cost after step     5:  0.2816102\n",
+      "Cost after step    10:  0.0755249\n",
+      "Cost after step    15:  0.0363118\n",
+      "Cost after step    20:  0.0221546\n",
+      "Cost after step    25:  0.0153002\n",
+      "Cost after step    30:  0.0113866\n",
+      "Cost after step    35:  0.0089049\n",
+      "Cost after step    40:  0.0072133\n",
+      "Cost after step    45:  0.0059979\n",
+      "Cost after step    50:  0.0050890\n",
+      "Cost after step    55:  0.0043878\n",
+      "Cost after step    60:  0.0038329\n",
+      "Cost after step    65:  0.0033848\n",
+      "Cost after step    70:  0.0030165\n",
+      "Cost after step    75:  0.0027095\n",
+      "Cost after step    80:  0.0024503\n",
+      "Cost after step    85:  0.0022291\n",
+      "Cost after step    90:  0.0020385\n",
+      "Cost after step    95:  0.0018729\n",
+      "Cost after step   100:  0.0017279\n",
+      "Optimized rotation angles: [[[ 0.84813186  1.15252958  0.13755776]\n",
+      "  [ 0.65017847  0.69879178 -0.03966164]]\n",
       "\n",
-      " [[-0.21772258  1.67238086  0.31310511]\n",
-      "  [ 0.31703774  0.07002425  0.31852312]]]\n"
+      " [[ 0.10918059  2.41888637  0.92832058]\n",
+      "  [ 0.99151456  0.93468784  0.59093966]]]\n"
      ]
     }
    ],
@@ -196,21 +188,24 @@
     "# to obtain the expected output of the quantum circuit after error mitigation,\n",
     "# and then proceed with the Loss calculation.\n",
     "\n",
-    "\n",
     "def cost(x):\n",
-    "    return ((train_cir_with_qem(x)/p_t)-(-1))**2\n",
+    "    return ((train_cir_with_qem(x) / p_t) - (-1)) ** 2\n",
     "\n",
     "opt = qml.GradientDescentOptimizer(stepsize=0.1)\n",
-    "\n",
-    "lst = []\n",
     "steps = 100\n",
     "params = weights\n",
     "\n",
     "for i in range(steps):\n",
     "    params = opt.step(cost, params)\n",
+    "    w = params.copy().reshape(-1)\n",
+    "    paras = [[0, w[0]], [0, w[1]], [0, w[2]], [0, w[3]], [0, w[4]], [0, w[5]], [0, 1], [1, 0],\n",
+    "         [0, w[6]], [0, w[7]], [0, w[8]], [0, w[9]], [0, w[10]], [0, w[11]], [0, 1], [1, 0]]\n",
+    "    qemzmsepc = qem.QEMZMSEPC(n_qubits)\n",
+    "    nqubitspaulichannel = nqubitschannel.nqubitsrandompaulichannel(p_identity=0.85)\n",
+    "    _, p_t = qemzmsepc.qemzmsepc(operations=operations, paras=paras, dev=dev, p=0.9,\n",
+    "                             kraus_matrices_of_a_pauli_channel=nqubitspaulichannel)\n",
     "    if (i + 1) % 5 == 0:\n",
     "        print(\"Cost after step {:5d}: {: .7f}\".format(i + 1, cost(params)))\n",
-    "        lst.append(cost(params))\n",
     "print(\"Optimized rotation angles: {}\".format(params))"
    ]
   },
@@ -221,7 +216,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# It can be seen that the Loss function after error mitigation performs better than without error mitigation."
+    "# From the results, we can observe that the Loss function exhibits a stable decreasing trend\n",
+    "# after error mitigation through the QEMZMSEPC scheme,\n",
+    "# and ultimately, the outcome is better than without error mitigation."
    ]
   }
  ],
