--- a/qml-task-test.ipynb
+++ b/qml-task-test.ipynb
@@ -22,31 +22,31 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Cost after step     5:  0.3277493\n",
-      "Cost after step    10:  0.1620262\n",
-      "Cost after step    15:  0.0834116\n",
-      "Cost after step    20:  0.0310678\n",
-      "Cost after step    25:  0.0550540\n",
-      "Cost after step    30:  0.0473296\n",
-      "Cost after step    35:  0.0637228\n",
-      "Cost after step    40:  0.0305615\n",
-      "Cost after step    45:  0.0528701\n",
-      "Cost after step    50:  0.0499776\n",
-      "Cost after step    55:  0.0686858\n",
-      "Cost after step    60:  0.0540521\n",
-      "Cost after step    65:  0.0395443\n",
-      "Cost after step    70:  0.0564822\n",
-      "Cost after step    75:  0.0124367\n",
-      "Cost after step    80:  0.0513430\n",
-      "Cost after step    85:  0.0147628\n",
-      "Cost after step    90:  0.0386811\n",
-      "Cost after step    95:  0.0324363\n",
-      "Cost after step   100:  0.0363526\n",
-      "Optimized rotation angles: [[[ 0.816732    1.54391133  0.01661329]\n",
-      "  [ 0.64230455  1.93650413  0.24587008]]\n",
+      "Cost after step     5:  2.2989231\n",
+      "Cost after step    10:  0.7754341\n",
+      "Cost after step    15:  0.3306408\n",
+      "Cost after step    20:  0.1006391\n",
+      "Cost after step    25:  0.1000156\n",
+      "Cost after step    30:  0.1206770\n",
+      "Cost after step    35:  0.1367316\n",
+      "Cost after step    40:  0.0564424\n",
+      "Cost after step    45:  0.0284204\n",
+      "Cost after step    50:  0.0999624\n",
+      "Cost after step    55:  0.0396441\n",
+      "Cost after step    60:  0.0242549\n",
+      "Cost after step    65:  0.0560122\n",
+      "Cost after step    70:  0.0763092\n",
+      "Cost after step    75:  0.0871729\n",
+      "Cost after step    80:  0.0700602\n",
+      "Cost after step    85:  0.0325430\n",
+      "Cost after step    90:  0.0190190\n",
+      "Cost after step    95:  0.0543895\n",
+      "Cost after step   100:  0.0827970\n",
+      "Optimized rotation angles: [[[ 0.32001913  1.33916428  0.23937227]\n",
+      "  [ 0.82005123  2.65771552 -0.14283203]]\n",
       "\n",
-      " [[-0.24514998  1.20448349  0.77630559]\n",
-      "  [ 0.20841162  0.44672854  0.92420115]]]\n"
+      " [[ 0.279005    0.48305163  0.43061035]\n",
+      "  [ 0.38823274  0.67588869  0.48096669]]]\n"
      ]
     }
    ],
@@ -61,7 +61,7 @@
     "pauli_set_of_n_qubits = nqubitspaulimatrices.get_pauli_matrices_of_n_qubits()\n",
     "nqubitschannel = qem.NqubitsChannel(n_qubits, pauli_set_of_n_qubits)\n",
     "\n",
-    "nqubitspaulichannel = nqubitschannel.nqubitsrandompaulichannel(p_identity=0.9)\n",
+    "nqubitspaulichannel = nqubitschannel.nqubitsrandompaulichannel(p_identity=0.85)\n",
     "nqubitsdepolarizingchannel = nqubitschannel.nqubitsdepolarizingchannel(0.9)\n",
     "\n",
     "@qml.qnode(qml.device('default.mixed', wires=n_qubits))\n",
@@ -75,7 +75,7 @@
     "weights = np.random.random(size=shape)\n",
     "\n",
     "def cost(x):\n",
-    "    return ((train_cir_without_qem(x))-(-1))**2\n",
+    "    return (train_cir_without_qem(x) - (-1)) ** 2\n",
     "\n",
     "opt = qml.GradientDescentOptimizer(stepsize=0.1)\n",
     "steps = 100\n",
@@ -83,7 +83,6 @@
     "\n",
     "for i in range(steps):\n",
     "    nqubitspaulichannel = nqubitschannel.nqubitsrandompaulichannel(p_identity=0.85)\n",
-    "    nqubitsdepolarizingchannel = nqubitschannel.nqubitsdepolarizingchannel(0.9)\n",
     "    params = opt.step(cost, params)\n",
     "    if (i + 1) % 5 == 0:\n",
     "        print(\"Cost after step {:5d}: {: .7f}\".format(i + 1, cost(params)))\n",
@@ -112,7 +111,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.8096893796064297\n"
+      "0.7221190820795362\n"
      ]
     }
    ],
@@ -144,31 +143,31 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Cost after step     5:  0.2816102\n",
-      "Cost after step    10:  0.0755249\n",
-      "Cost after step    15:  0.0363118\n",
-      "Cost after step    20:  0.0221546\n",
-      "Cost after step    25:  0.0153002\n",
-      "Cost after step    30:  0.0113866\n",
-      "Cost after step    35:  0.0089049\n",
-      "Cost after step    40:  0.0072133\n",
-      "Cost after step    45:  0.0059979\n",
-      "Cost after step    50:  0.0050890\n",
-      "Cost after step    55:  0.0043878\n",
-      "Cost after step    60:  0.0038329\n",
-      "Cost after step    65:  0.0033848\n",
-      "Cost after step    70:  0.0030165\n",
-      "Cost after step    75:  0.0027095\n",
-      "Cost after step    80:  0.0024503\n",
-      "Cost after step    85:  0.0022291\n",
-      "Cost after step    90:  0.0020385\n",
-      "Cost after step    95:  0.0018729\n",
-      "Cost after step   100:  0.0017279\n",
-      "Optimized rotation angles: [[[ 0.84813186  1.15252958  0.13755776]\n",
-      "  [ 0.65017847  0.69879178 -0.03966164]]\n",
+      "Cost after step     5:  0.2649683\n",
+      "Cost after step    10:  0.0547809\n",
+      "Cost after step    15:  0.0223220\n",
+      "Cost after step    20:  0.0121149\n",
+      "Cost after step    25:  0.0076445\n",
+      "Cost after step    30:  0.0052879\n",
+      "Cost after step    35:  0.0038902\n",
+      "Cost after step    40:  0.0029908\n",
+      "Cost after step    45:  0.0023766\n",
+      "Cost after step    50:  0.0019376\n",
+      "Cost after step    55:  0.0016124\n",
+      "Cost after step    60:  0.0013644\n",
+      "Cost after step    65:  0.0011708\n",
+      "Cost after step    70:  0.0010166\n",
+      "Cost after step    75:  0.0008916\n",
+      "Cost after step    80:  0.0007888\n",
+      "Cost after step    85:  0.0007032\n",
+      "Cost after step    90:  0.0006312\n",
+      "Cost after step    95:  0.0005699\n",
+      "Cost after step   100:  0.0005173\n",
+      "Optimized rotation angles: [[[ 0.55272645  1.38395009  0.09040103]\n",
+      "  [ 0.00984874  1.81377291 -0.06315294]]\n",
       "\n",
-      " [[ 0.10918059  2.41888637  0.92832058]\n",
-      "  [ 0.99151456  0.93468784  0.59093966]]]\n"
+      " [[ 0.12919937  1.28799755  0.13952135]\n",
+      "  [ 0.60765351  0.68838086  0.21007701]]]\n"
      ]
     }
    ],
@@ -194,13 +193,13 @@
     "opt = qml.GradientDescentOptimizer(stepsize=0.1)\n",
     "steps = 100\n",
     "params = weights\n",
+    "qemzmsepc = qem.QEMZMSEPC(n_qubits)\n",
     "\n",
     "for i in range(steps):\n",
     "    params = opt.step(cost, params)\n",
     "    w = params.copy().reshape(-1)\n",
     "    paras = [[0, w[0]], [0, w[1]], [0, w[2]], [0, w[3]], [0, w[4]], [0, w[5]], [0, 1], [1, 0],\n",
     "         [0, w[6]], [0, w[7]], [0, w[8]], [0, w[9]], [0, w[10]], [0, w[11]], [0, 1], [1, 0]]\n",
-    "    qemzmsepc = qem.QEMZMSEPC(n_qubits)\n",
     "    nqubitspaulichannel = nqubitschannel.nqubitsrandompaulichannel(p_identity=0.85)\n",
     "    _, p_t = qemzmsepc.qemzmsepc(operations=operations, paras=paras, dev=dev, p=0.9,\n",
     "                             kraus_matrices_of_a_pauli_channel=nqubitspaulichannel)\n",
