--- a/test.ipynb
+++ b/test.ipynb
@@ -39,32 +39,32 @@
      "output_type": "stream",
      "text": [
       "z_ideal is 1.0\n",
-      "z_unmitigated is 0.5272660039497336\n",
-      "z_mitigated is 1.0000000000000047\n",
+      "z_unmitigated is 0.5496549374155614\n",
+      "z_mitigated is 1.0000000000000053\n",
       "------------------\n",
       "z_ideal is 0.5931327983656769\n",
-      "z_unmitigated is 0.4602180087500005\n",
-      "z_mitigated is 0.5931327983656788\n",
+      "z_unmitigated is 0.40646130881124665\n",
+      "z_mitigated is 0.5931327983656797\n",
       "------------------\n",
       "z_ideal is 0.1493041506116879\n",
-      "z_unmitigated is 0.07496693175764899\n",
-      "z_mitigated is 0.14930415061169278\n",
+      "z_unmitigated is 0.0811524670604604\n",
+      "z_mitigated is 0.14930415061169264\n",
       "------------------\n",
       "z_ideal is 0.0051202072280735166\n",
-      "z_unmitigated is 0.002967274116152028\n",
-      "z_mitigated is 0.005120207228076225\n",
+      "z_unmitigated is 0.0029125741198910496\n",
+      "z_mitigated is 0.005120207228076217\n",
       "------------------\n",
       "z_ideal is 0.0002755900039979539\n",
-      "z_unmitigated is 0.00020727242047736266\n",
-      "z_mitigated is 0.0002755900039964592\n",
+      "z_unmitigated is 0.00017808963180709902\n",
+      "z_mitigated is 0.00027559000399652916\n",
       "------------------\n",
       "z_ideal is 0.06495850756506487\n",
-      "z_unmitigated is 0.03676984256751703\n",
-      "z_mitigated is 0.06495850756505632\n",
+      "z_unmitigated is 0.038971230231762\n",
+      "z_mitigated is 0.06495850756505615\n",
       "------------------\n",
       "z_ideal is 0.4119471515970569\n",
-      "z_unmitigated is 0.3168419364104166\n",
-      "z_mitigated is 0.41194715159706563\n",
+      "z_unmitigated is 0.3101644615538704\n",
+      "z_mitigated is 0.4119471515970644\n",
       "------------------\n"
      ]
     }
@@ -80,9 +80,7 @@
     "rotation_angle = [0, 0.5, 0.9, 1.3, 1.7, 2.1, 2.5]\n",
     "p = 0.8 # p: Depolarization rate.\n",
     "for rotation_angle_of_rx in rotation_angle:\n",
-    "    nqubitspaulimatrices = qem.NqubitsPauliMatrices(n_qubits)\n",
-    "    pauli_set_n_qubits = nqubitspaulimatrices.get_pauli_matrices_of_n_qubits()\n",
-    "    nqubitschannel = qem.NqubitsChannel(n_qubits, pauli_set_n_qubits)\n",
+    "    nqubitschannel = qem.NqubitsChannel(n_qubits)\n",
     "    kraus_matrices_of_a_pauli_channel = nqubitschannel.nqubitsrandompaulichannel(p_identity=0.8)\n",
     "    # The operations and paras required to simulate a Trotter step quantum circuit are as follows.\n",
     "    operations = ['RX', 'RX', 'RX', 'RX', 'CNOT', 'CNOT', 'RZ', 'RZ', 'CNOT', 'CNOT', 'CNOT', 'RZ', 'CNOT']\n",
