--- a/testV2.ipynb
+++ b/testV2.ipynb
@@ -15,16 +15,49 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "fe614404",
+   "id": "61780ad3",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "z_ideal is 1.0\n",
+      "z_unmitigated is 0.28191171312999513\n",
+      "z_mitigated is 1.0000000000000058\n",
+      "------------------\n",
+      "z_ideal is 0.5931327983656769\n",
+      "z_unmitigated is 0.16721108330085613\n",
+      "z_mitigated is 0.593132798365679\n",
+      "------------------\n",
+      "z_ideal is 0.08522112911847729\n",
+      "z_unmitigated is 0.024024834504663414\n",
+      "z_mitigated is 0.08522112911848502\n",
+      "------------------\n",
+      "z_ideal is 2.5037531073114627e-05\n",
+      "z_unmitigated is 7.058373277309127e-06\n",
+      "z_mitigated is 2.5037531073066387e-05\n",
+      "------------------\n",
+      "z_ideal is 0.029990685342117292\n",
+      "z_unmitigated is 0.008454725482737787\n",
+      "z_mitigated is 0.02999068534211013\n",
+      "------------------\n",
+      "z_ideal is 0.4119471515970569\n",
+      "z_unmitigated is 0.11613272722574977\n",
+      "z_mitigated is 0.4119471515970639\n",
+      "------------------\n"
+     ]
+    }
+   ],
    "source": [
     "n_qubits = 4\n",
     "dev = qml.device('default.mixed', wires=n_qubits)\n",
-    "rotation_angle_of_rx = 0\n",
-    "rotation_angle_of_rz = -0.2\n",
+    "nqubitschannel = qem.NqubitsChannel(n_qubits)\n",
+    "pauli_channel = nqubitschannel.nqubitsrandompaulichannel(p_identity=0.5)\n",
+    "qemzmsepc = qem.QEMZMSEPC(n_qubits)\n",
+    "p = 0.8\n",
     "\n",
-    "def trotterstep1():\n",
+    "def trotterstep1(rotation_angle_of_rx, rotation_angle_of_rz):\n",
     "    qml.RX(rotation_angle_of_rx, wires=0)\n",
     "    qml.RX(rotation_angle_of_rx, wires=1)\n",
     "    qml.RX(rotation_angle_of_rx, wires=2)\n",
@@ -37,67 +70,22 @@
     "    qml.CNOT(wires=[2, 3])\n",
     "    qml.CNOT(wires=[1, 2])\n",
     "    qml.RZ(rotation_angle_of_rz, wires=2)\n",
-    "    qml.CNOT(wires=[1, 2])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "4b058798",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "z_ideal is 1.0\n",
-      "z_unmitigated is 0.44885978569304075\n",
-      "z_mitigated is 1.0000000000000058\n",
-      "------------------\n",
-      "z_ideal is 0.5931327983656769\n",
-      "z_unmitigated is 0.26623346076193155\n",
-      "z_mitigated is 0.5931327983656792\n",
-      "------------------\n",
-      "z_ideal is 0.1493041506116879\n",
-      "z_unmitigated is 0.06701662904664486\n",
-      "z_mitigated is 0.1493041506116927\n",
-      "------------------\n",
-      "z_ideal is 0.0051202072280735166\n",
-      "z_unmitigated is 0.0022982551190989277\n",
-      "z_mitigated is 0.005120207228077064\n",
-      "------------------\n",
-      "z_ideal is 0.0002755900039979539\n",
-      "z_unmitigated is 0.00012370127013251048\n",
-      "z_mitigated is 0.00027559000399602496\n",
-      "------------------\n",
-      "z_ideal is 0.06495850756506487\n",
-      "z_unmitigated is 0.02915726178459092\n",
-      "z_mitigated is 0.0649585075650566\n",
-      "------------------\n",
-      "z_ideal is 0.4119471515970569\n",
-      "z_unmitigated is 0.1849065101827162\n",
-      "z_mitigated is 0.4119471515970647\n",
-      "------------------\n"
-     ]
-    }
-   ],
-   "source": [
-    "nqubitschannel = qem.NqubitsChannel(n_qubits)\n",
-    "pauli_channel = nqubitschannel.nqubitsrandompaulichannel(p_identity=0.5)\n",
-    "qemzmsepc = qem.QEMZMSEPC(n_qubits)\n",
+    "    qml.CNOT(wires=[1, 2])\n",
     "\n",
-    "rotation_angle = [0, 0.5, 0.9, 1.3, 1.7, 2.1, 2.5]\n",
-    "p = 0.8\n",
-    "for rotation_angle_of_rx in rotation_angle:\n",
-    "    z_ideal = qemzmsepc.noise_circuit_output(dev, trotterstep1)\n",
+    "rotation_angles = [0, 0.5, 1, 1.5, 2, 2.5]\n",
+    "rotation_angle_of_rz = -0.2\n",
+    "for rotation_angle_of_rx in rotation_angles:\n",
+    "    ideal_output_func = qemzmsepc.noise_circuit(trotterstep1)\n",
+    "    z_ideal = qml.QNode(ideal_output_func, dev)(rotation_angle_of_rx, rotation_angle_of_rz)\n",
     "    print(f\"z_ideal is {z_ideal}\")\n",
-    "    z_unmitigated = qemzmsepc.noise_circuit_output(dev, trotterstep1, p=p,\n",
-    "                       kraus_matrices_of_a_pauli_channel=pauli_channel,\n",
-    "                       need_gate_noise=True, need_measurement_noise=True)\n",
+    "    noise_output_func = qemzmsepc.noise_circuit(trotterstep1, p=p, kraus_matrices_of_a_pauli_channel=pauli_channel,\n",
+    "                                            need_gate_noise=True, need_measurement_noise=True)\n",
+    "    z_unmitigated = qml.QNode(noise_output_func, dev)(rotation_angle_of_rx, rotation_angle_of_rz)\n",
     "    print(f\"z_unmitigated is {z_unmitigated}\")\n",
-    "    z_mitigated, _ = qemzmsepc.qemzmsepc(trotterstep1, p, dev, pauli_channel)\n",
+    "    z_mitigated, _  = qemzmsepc.qemzmsepc(trotterstep1, p, dev, pauli_channel,\n",
+    "                                      rotation_angle_of_rx, rotation_angle_of_rz)\n",
     "    print(f\"z_mitigated is {z_mitigated}\")\n",
-    "    print(\"------------------\")\n"
+    "    print(\"------------------\")"
    ]
   }
  ],
