--- a/testV2.ipynb
+++ b/testV2.ipynb
@@ -23,28 +23,28 @@
      "output_type": "stream",
      "text": [
       "z_ideal is 1.0\n",
-      "z_unmitigated is 0.28191171312999513\n",
-      "z_mitigated is 1.0000000000000058\n",
+      "z_unmitigated is 0.43476779033848256\n",
+      "z_mitigated is 1.000000000000005\n",
       "------------------\n",
       "z_ideal is 0.5931327983656769\n",
-      "z_unmitigated is 0.16721108330085613\n",
-      "z_mitigated is 0.593132798365679\n",
+      "z_unmitigated is 0.25787503612272644\n",
+      "z_mitigated is 0.5931327983656789\n",
       "------------------\n",
       "z_ideal is 0.08522112911847729\n",
-      "z_unmitigated is 0.024024834504663414\n",
-      "z_mitigated is 0.08522112911848502\n",
+      "z_unmitigated is 0.03705140199699275\n",
+      "z_mitigated is 0.08522112911848621\n",
       "------------------\n",
       "z_ideal is 2.5037531073114627e-05\n",
-      "z_unmitigated is 7.058373277309127e-06\n",
-      "z_mitigated is 2.5037531073066387e-05\n",
+      "z_unmitigated is 1.0885512060035407e-05\n",
+      "z_mitigated is 2.5037531072603805e-05\n",
       "------------------\n",
       "z_ideal is 0.029990685342117292\n",
-      "z_unmitigated is 0.008454725482737787\n",
-      "z_mitigated is 0.02999068534211013\n",
+      "z_unmitigated is 0.013038983996927437\n",
+      "z_mitigated is 0.029990685342110485\n",
       "------------------\n",
       "z_ideal is 0.4119471515970569\n",
-      "z_unmitigated is 0.11613272722574977\n",
-      "z_mitigated is 0.4119471515970639\n",
+      "z_unmitigated is 0.17910135283608694\n",
+      "z_mitigated is 0.4119471515970644\n",
       "------------------\n"
      ]
     }
@@ -75,15 +75,18 @@
     "rotation_angles = [0, 0.5, 1, 1.5, 2, 2.5]\n",
     "rotation_angle_of_rz = -0.2\n",
     "for rotation_angle_of_rx in rotation_angles:\n",
-    "    ideal_output_func = qemzmsepc.noise_circuit(trotterstep1)\n",
-    "    z_ideal = qml.QNode(ideal_output_func, dev)(rotation_angle_of_rx, rotation_angle_of_rz)\n",
+    "    z_ideal = qml.QNode(qemzmsepc.noise_circuit, dev)(trotterstep1, rotation_angle_of_rx, rotation_angle_of_rz)\n",
     "    print(f\"z_ideal is {z_ideal}\")\n",
-    "    noise_output_func = qemzmsepc.noise_circuit(trotterstep1, p=p, kraus_matrices_of_a_pauli_channel=pauli_channel,\n",
-    "                                            need_gate_noise=True, need_measurement_noise=True)\n",
-    "    z_unmitigated = qml.QNode(noise_output_func, dev)(rotation_angle_of_rx, rotation_angle_of_rz)\n",
+    "    \n",
+    "    z_unmitigated = qml.QNode(qemzmsepc.noise_circuit, dev)(trotterstep1, \n",
+    "                    rotation_angle_of_rx, rotation_angle_of_rz, p=p, \n",
+    "                    kraus_matrices_of_a_pauli_channel=pauli_channel, need_gate_noise=True,\n",
+    "                    need_measurement_noise=True)\n",
     "    print(f\"z_unmitigated is {z_unmitigated}\")\n",
-    "    z_mitigated, _  = qemzmsepc.qemzmsepc(trotterstep1, p, dev, pauli_channel,\n",
-    "                                      rotation_angle_of_rx, rotation_angle_of_rz)\n",
+    "    \n",
+    "    z_mitigated, _  = qemzmsepc.qemzmsepc(trotterstep1, p, dev,\n",
+    "                    rotation_angle_of_rx, rotation_angle_of_rz,\n",
+    "                    kraus_matrices_of_a_pauli_channel=pauli_channel)\n",
     "    print(f\"z_mitigated is {z_mitigated}\")\n",
     "    print(\"------------------\")"
    ]
