--- a/qml-task-testV2.ipynb
+++ b/qml-task-testV2.ipynb
@@ -168,7 +168,7 @@
     "\n",
     "qemzmsepc = qem.QEMZMSEPC(n_qubits)\n",
     "\n",
-    "def train_cir_without_qem(parameters):\n",
+    "def train_cir_with_qem(parameters):\n",
     "    qml.StronglyEntanglingLayers(weights=parameters, wires=range(2))\n",
     "\n",
     "shape = qml.StronglyEntanglingLayers.shape(n_layers=2, n_wires=2)\n",
