--- a/testV2new.ipynb
+++ b/testV2new.ipynb
@@ -60,17 +60,49 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "rotation_angle_of_rx is 0:\n",
       "z_ideal is 1.0\n",
-      "z_unmitigated is 0.7575810353170114\n",
-      "z_mitigated is 1.000000000000006\n",
+      "z_unmitigated is 0.2136913107097822\n",
+      "z_mitigated is 1.000000000000004\n",
+      "------------------\n",
+      "rotation_angle_of_rx is 0.5:\n",
+      "z_ideal is 0.5931327983656769\n",
+      "z_unmitigated is 0.12674732510772257\n",
+      "z_mitigated is 0.5931327983656788\n",
+      "------------------\n",
+      "rotation_angle_of_rx is 1:\n",
+      "z_ideal is 0.08522112911847729\n",
+      "z_unmitigated is 0.018211014781495786\n",
+      "z_mitigated is 0.08522112911848559\n",
+      "------------------\n",
+      "rotation_angle_of_rx is 1.5:\n",
+      "z_ideal is 2.5037531073114627e-05\n",
+      "z_unmitigated is 5.350302831892695e-06\n",
+      "z_mitigated is 2.503753107339751e-05\n",
+      "------------------\n",
+      "rotation_angle_of_rx is 2:\n",
+      "z_ideal is 0.029990685342117292\n",
+      "z_unmitigated is 0.006408748859840944\n",
+      "z_mitigated is 0.02999068534211083\n",
+      "------------------\n",
+      "rotation_angle_of_rx is 2.5:\n",
+      "z_ideal is 0.4119471515970569\n",
+      "z_unmitigated is 0.08802952676793763\n",
+      "z_mitigated is 0.41194715159706286\n",
+      "------------------\n",
+      "rotation_angle_of_rx is 3:\n",
+      "z_ideal is 0.9605668881667448\n",
+      "z_unmitigated is 0.2052647973567689\n",
+      "z_mitigated is 0.9605668881667554\n",
       "------------------\n"
      ]
     }
    ],
    "source": [
-    "rotation_angles = [0]\n",
+    "rotation_angles = [0, 0.5, 1, 1.5, 2, 2.5, 3]\n",
     "rotation_angle_of_rz = -0.2\n",
     "for rotation_angle_of_rx in rotation_angles:\n",
+    "    print(f\"rotation_angle_of_rx is {rotation_angle_of_rx}:\")\n",
     "    z_ideal = qml.QNode(qemzmsepc.noise_circuit, dev)(trotterstep1, rotation_angle_of_rx, rotation_angle_of_rz)\n",
     "    print(f\"z_ideal is {z_ideal}\")\n",
     "    \n",
@@ -86,6 +118,14 @@
     "    print(f\"z_mitigated is {z_mitigated}\")\n",
     "    print(\"------------------\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dd1da2c6",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
